# term

./: Cargo.toml  README.md
src/: main.rs
src/pty/: mod.rs
src/renderer/: mod.rs  shader.wgsl
src/window/: mod.rs
